changed date format for hard-coded things

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@ P    X          F                K       J              F      J     Y      5   
                       <a href="#">Show Date </a><span class="caret"></span>
                     </button>
                     <ul class="" id="showdate-filter">
-                      <li><a href="#" data-showdate="1/24/2014">1/24/2014</a></li>
-                      <li><a href="#" data-showdate="1/31/2014">1/31/2014</a></li>
-                      <li><a href="#" data-showdate="3/28/2014">3/28/2014</a></li>
-                      <li><a href="#" data-showdate="4/11/2014">4/11/2014</a></li>
-                      <li><a href="#" data-showdate="4/23/2014">4/23/2014</a></li>
-                      <li><a href="#" data-showdate="4/25/2014">4/25/2014</a></li>
-                      <li><a href="#" data-showdate="5/3/2014">5/3/2014</a></li>
+                      <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
+                      <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
+                      <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
+                      <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
+                      <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
+                      <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
+                      <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
                     </ul>
                   </div>
                 </li>
@@ -222,13 +222,13 @@ P    X          F                K       J              F      J     Y      5   
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="showdate-filter">
-                        <li><a href="#" data-showdate="1/24/2014">1/24/2014</a></li>
-                        <li><a href="#" data-showdate="1/31/2014">1/31/2014</a></li>
-                        <li><a href="#" data-showdate="3/28/2014">3/28/2014</a></li>
-                        <li><a href="#" data-showdate="4/11/2014">4/11/2014</a></li>
-                        <li><a href="#" data-showdate="4/23/2014">4/23/2014</a></li>
-                        <li><a href="#" data-showdate="4/25/2014">4/25/2014</a></li>
-                        <li><a href="#" data-showdate="5/3/2014">5/3/2014</a></li>
+                      <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
+                      <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
+                      <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
+                      <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
+                      <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
+                      <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
+                      <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
                       </ul>
                     </div>
                   </li>
@@ -254,7 +254,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- teaching ma -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>01/24/2014</date>&ndash;<date>02/16/2014</date></h3>
+                  <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -264,7 +264,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- post-bacc fine art -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>01/31/2014</date>&ndash;<date>02/16/2014</date></h3>
+                  <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -274,7 +274,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- curatorial practice -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>02/01/2014</date>&ndash;<date>05/09/2014</date></h3>
+                  <h3><date>Feb 01</date>&ndash;<date>May 09, 2014</date></h3>
                   <p class="small">Ongoing. <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
                 </div>
                 <div class="col-sm-8">
@@ -285,7 +285,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>03/28/2014</date>&ndash;<date>04/06/2014</date></h3>
+                  <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -298,7 +298,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>04/11/2014</date>&ndash;<date>04/20/2014</date></h3>
+                  <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -311,7 +311,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>04/23/2014</date>&ndash;<date>05/04/2014</date></h3>
+                  <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -322,7 +322,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>04/25/2014</date>&ndash;<date>05/04/2014</date></h3>
+                  <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -334,8 +334,8 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>05/03/2014</date></h3>
-                  <p class="small">Symposium from 5–7pm, that day</p>
+                  <h3><date>May 03, 2014</date></h3>
+                  <p class="small">Symposium from 5:00&ndash;7:00pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Critical Studies MA</p>
@@ -346,7 +346,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>06/28/2014</date>&ndash;<date>07/12/2014</date></h3>
+                  <h3><date>Jun 28</date>&ndash;<date>Jul 12, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
@@ -357,7 +357,7 @@ P    X          F                K       J              F      J     Y      5   
               <!-- -->
               <li class="row showtime">
                 <div class="col-sm-4">
-                  <h3><date>07/27/2014</date>&ndash;<date>08/01/2014</date></h3>
+                  <h3><date>Jul 27</date>&ndash;<date>Aug 01, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
