--- a/index.html
+++ b/index.html
@@ -97,37 +97,29 @@ P    X          F                K       J              F      J     Y      5   
                   </ul>
                 </li>
                 <li>
-                  <div class="btn-group ">
-                    <button type="button" data-type="gallery" class="btn btn-default sort-studentlist" data-toggle="dropdown">
-                      <a href="#">Gallery </a><span class="caret"></span>
-                    </button>
-                    <ul class="" id="gallery-filter">
-                      <li><a href="#" data-gallery="D center">D Center</a></li>
-                      <li><a href="#" data-gallery="Decker">Decker</a></li>
-                      <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                      <li><a href="#" data-gallery="Leidy">Leidy</a></li>
-                      <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
-                      <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
-                      <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
-                      <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
-                    </ul>
-                  </div>
+                  <span>Gallery</span>
+                  <ul class="" id="gallery-filter">
+                    <li><a href="#" data-gallery="D center">D Center</a></li>
+                    <li><a href="#" data-gallery="Decker">Decker</a></li>
+                    <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                    <li><a href="#" data-gallery="Leidy">Leidy</a></li>
+                    <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                    <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
+                    <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
+                    <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
+                  </ul>
                 </li>
                 <li>
-                  <div class="btn-group ">
-                    <button type="button" data-type="gallery" class="btn btn-default sort-studentlist" data-toggle="dropdown">
-                      <a href="#">Show Date </a><span class="caret"></span>
-                    </button>
-                    <ul class="" id="showdate-filter">
-                      <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
-                      <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
-                      <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
-                      <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
-                      <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
-                      <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
-                      <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
-                    </ul>
-                  </div>
+                  <span>Show Date</span>
+                  <ul class="" id="showdate-filter">
+                    <li><a href="#" data-showdate="1/24/2014">Jan 24</a></li>
+                    <li><a href="#" data-showdate="1/31/2014">Jan 31</a></li>
+                    <li><a href="#" data-showdate="3/28/2014">Mar 28</a></li>
+                    <li><a href="#" data-showdate="4/11/2014">Apr 11</a></li>
+                    <li><a href="#" data-showdate="4/23/2014">Apr 23</a></li>
+                    <li><a href="#" data-showdate="4/25/2014">Apr 25</a></li>
+                    <li><a href="#" data-showdate="5/3/2014">May 03</a></li>
+                  </ul>
                 </li>
               </ul>
             </li>
