okay, nab menu styling is pretty good. Now need to just fix the overlay issues

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ P    X          F                K       J              F      J     Y      5   
               <ul>
                 <li>
                   <div class="input-group">
-                    <input id="search-students" type="text" class="form-control" placeholder="Search <3">
+                    <input id="search-students" type="text" class="form-control" placeholder="Search by Name">
                     <span class="input-group-btn">
                       <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                     </span>
