critical studies improvements

--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -42,7 +42,8 @@ P    X          F                K       J              F      J     Y      5   
   </head>
   
   <body class="critical">
-
+    
+  <div class="student-overlay">
     <main class="container">
 
       <button type="button" class="close"><a href="/">&times;</a></button>
@@ -90,6 +91,7 @@ P    X          F                K       J              F      J     Y      5   
       <a href="/"><img class="logo" src="img/logo.png" /></a>
 
     </main>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
