right align schedule type

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ P    X          F                K       J              F      J     Y      5   
             <ul>
               <!-- teaching ma -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -256,7 +256,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
               <!-- post-bacc fine art -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -266,7 +266,7 @@ P    X          F                K       J              F      J     Y      5   
               </li>
               <!-- curatorial practice -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Feb 01</date>&ndash;<date>May 09, 2014</date></h3>
                   <p class="small">Ongoing. <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
                 </div>
@@ -277,7 +277,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -290,7 +290,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -303,7 +303,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -314,7 +314,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -326,7 +326,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
                   <p class="small">Symposium from 5:00&ndash;7:00pm</p>
                 </div>
@@ -338,7 +338,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Jun 28</date>&ndash;<date>Jul 12, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
@@ -349,7 +349,7 @@ P    X          F                K       J              F      J     Y      5   
 
               <!-- -->
               <li class="row showtime">
-                <div class="col-sm-4">
+                <div class="col-sm-4 text-right">
                   <h3><date>Jul 27</date>&ndash;<date>Aug 01, 2014</date></h3>
                   <p class="small">opening tk</p>
                 </div>
