--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: January 24, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Teaching MA</p>
@@ -258,7 +258,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: January 31, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Post-Baccalaureate Fine Art</p>
@@ -268,7 +268,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Feb 01</date>&ndash;<date>May 09, 2014</date></h3>
-                  <p class="small">Ongoing. <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
+                  <p class="small"> <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Curatorial Practice MFA</p>
@@ -279,7 +279,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: March 28, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Illustration Practice MFA</p>
@@ -292,7 +292,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: April 11, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Community Arts MFA</p>
@@ -305,7 +305,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: April 25, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Social Design MA</p>
@@ -316,7 +316,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: April 25, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">LeRoy E. Hoffberger School of Painting MFA</p>
