improve 2nd off-campus entry

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Details »</a></p></li>
-                    <li><h5>Critical Studies</h5></li>
+                    <li class="add-top"><h5>Critical Studies</h5></li>
                     <li><p><a href="criticalstudies.html"  target="_blank">Details »</a></p></li>
                   </ul>
                 </div>
