--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
-                  <p class="small">Opening: March 28, 5-7pm</p>
+                  <p class="small">Opening: March 28, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Illustration Practice MFA</p>
@@ -292,7 +292,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
-                  <p class="small">Opening: April 11, 5-7pm</p>
+                  <p class="small">Opening: April 11, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Community Arts MFA</p>
@@ -305,7 +305,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">Opening: April 25, 5-7pm</p>
+                  <p class="small">Opening: April 25, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Social Design MA</p>
@@ -316,7 +316,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">Opening: April 25, 5-7pm</p>
+                  <p class="small">Opening: April 25, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">LeRoy E. Hoffberger School of Painting MFA</p>
@@ -328,11 +328,10 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
-                  <p class="small">Symposium from 5:00&ndash;7:00pm</p>
+                  <p class="small">Symposium from 5&ndash;7pm<br>Takes place at the Walters Art Museum</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Critical Studies MA</p>
-                  <p class="small">Takes place at the Walters Art Museum</p>
                 </div>
               </li>
 
@@ -340,7 +339,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jun 28</date>&ndash;<date>Jul 12, 2014</date></h3>
-                  <p class="small">opening tk</p>
+                  <p class="small">Opening: June 28, 6&ndash;8p</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Studio Art MFA</p>
@@ -351,7 +350,6 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jul 27</date>&ndash;<date>Aug 01, 2014</date></h3>
-                  <p class="small">opening tk</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Art Education MA</p>
