adding students to critical studies page minor update to index.html

--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -76,14 +76,19 @@ P    X          F                K       J              F      J     Y      5   
 
             <article class="row">
 
-              <p class="col-xs-12 col-md-9">Statement about CS program... TK</p>
+              <p class="col-xs-12 col-md-9 lead">Become a significant voice in critical discourse on art and culture. The critical analysis, evaluation, and discussion of art and culture is often how most people become aware of importantinnovation and development in the field. The MA in Critical Studies degree provides a pathway to professional practice or further study at the doctoral level through an in-depth grounding in critical theory and analysis.</p>
 
               <div class="clearfix visible-sm"></div>
               
               <aside class="col-xs-12 col-md-3 program-list">
                 <h4>Critical Studies MA</h4>
                 <ul class="program-peers">
-                  <li>List of Students...</li>
+                  <li><p>Cheng Cao</p></li>
+                  <li><p>Zachary Franklin</p></li>
+                  <li><p>Bryan Hempel</p></li>
+                  <li><p>Emmanuel Thomas</p></li>
+                  <li><p>Megan Weikel</p></li>
+                  <li><p>Yiran Zheng</p></li>
                 </ul>
               </aside>
   
