--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
                     <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                     <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
-                    <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
+                    <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                   </ul>
                 </li>
                 <li>
@@ -205,7 +205,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
-                        <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
+                        <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                       </ul>
                     </div>
                   </li>
@@ -400,7 +400,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Details »</a></p></li>
                     <li class="add-top"><h5>Critical Studies</h5></li>
-                    <li><p><a href="criticalstudies.html"  target="_blank">Details »</a></p></li>
+                    <li><p><a href="criticalstudies.html">Details »</a></p></li>
                   </ul>
                 </div>
               </div>
