adding some CS links to schedule HTML

--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
-                  <p class="small">Symposium from 5&ndash;7pm<br>Takes place at the Walters Art Museum</p>
+                  <p class="small"><a href="criticalstudies.html">Symposium from 5&ndash;7pm<br></a>Takes place at the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></p>
                 </div>
                 <div class="col-sm-8">
-                  <p class="lead">Critical Studies MA</p>
+                  <p class="lead"><a href="criticalstudies.html">Critical Studies MA</a></p>
                 </div>
               </li>
 
