--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -58,11 +58,12 @@ P    X          F                K       J              F      J     Y      5   
                 <h2>Critical</h2>
                 <h2>Studies</h2>
                 <h2>MA</h2>
+                <h2>Thesis Symposium</h2>
         
                 <ul>
-                  <li>Symposium...</li>
-                  <li>Walters Art Museum</li>
-                  <li>May 3, Time to Time...</li>
+                  <li>At the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></li>
+                  <li><date>May 3</date></li>
+                  <li>Symposium from <time>5&ndash;7pm</time></li>
                 </ul>
   
               </div>
