--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@ P    X          F                K       J              F      J     Y      5   
             <h1>Participating Galleries</h1>
             <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf" target="_blank">Download Map</a></p>
             <section class="row">
-             <div class="col-sm-9">
+             <div class="col-xs-12 col-sm-6 col-md-9">
                 <img class="map" src="img/gradshow_2014_map.jpg" />
               </div>
-              <div  class="col-sm-3">
+              <div  class="col-xs-12 col-sm-6 col-md-3">
                 <div id="galleries-data">
                   <ul>
                     <li><h4>Bunting Center</h4></li>
@@ -413,7 +413,7 @@ P    X          F                K       J              F      J     Y      5   
             <ul class="list row grid-display" id="projects-demo">
               <script id="students-template" type="text/x-mustache-template">
                 {{#students}}
-                <li class="col-xs-6 col-sm-3 student thumb {{id}}">
+                <li class="col-xs-6 col-sm-4 col-md-3 student thumb {{id}} {{_id}}">
                   <div class="block">
                     <img src="img/thumbnails/{{_id}}.jpg" /> <!-- decent start to thumbnails -->
                     <div class="info">
