--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ P    X          F                K       J              F      J     Y      5   
       <div class="row">
         
         <div class="col-sm-2">
-          <nav class="mainnav hidden-xs" data-spy="affix" data-offset-top="399">
+          <nav class="mainnav hidden-xs" data-spy="affix" data-offset-top="399" data-offset-bottom="320">
             <ul class="nav nav-stacked nav-pills">
               <li><a href="#intro">Welcome</a></li>
               <li><a href="#schedule">Schedule</a></li>
