--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ P    X          F                K       J              F      J     Y      5   
       <div class="container">
         <div class="row">
           <img class="col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-0" src="img/mica_lockup_transp.png" />
-          <p class="col-xs-12 col-sm-2 col-sm-offset-6">Built and designed by <br/><a href="http://yingxizhou.info" target="_blank">YZ</a>, <a href="http://studiorichb.com/" target="_blank">RB</a>, <a href="http://www.nourtabet.com" target="_blank">NT</a>, <a href="http://www.sherwoodandforbes.com" target="_blank">ESF</a>, and the <a href="http://www.ookb.co" target="_blank">fine folks at the OOKB</a>.</p>          
+          <p class="col-xs-12 col-sm-2 col-sm-offset-6">Built and designed by <a href="http://yingxizhou.info" target="_blank">YZ</a>, <a href="http://studiorichb.com/" target="_blank">RB</a>, <a href="http://www.nourtabet.com" target="_blank">NT</a>, <a href="http://www.sherwoodandforbes.com" target="_blank">ESF</a>, and the <a href="http://www.ookb.co" target="_blank">OOKB</a>.</p>          
           <ul class="col-xs-12 col-sm-2">
             <li>Office of Grad Studies</li>
             <li>131 West North Avenue</li>
@@ -460,9 +460,9 @@ P    X          F                K       J              F      J     Y      5   
             <div class="col-xs-12 col-sm-4 col-md-3 student-info">
 
               <ul class="student-nav nav nav-pills nav-justified">
-                <li><span class="glyphicon glyphicon-chevron-left"></span></li>
-                <li><span class="glyphicon glyphicon-random"></span></li>
-                <li><span class="glyphicon glyphicon-chevron-right"></span></li>
+                <li><span class="overlay-nav-icon previous"></span></li>
+                <li><span class="overlay-nav-icon random"></span></li>
+                <li><span class="overlay-nav-icon next"></span></li>
               </ul>
 
               <div>
@@ -477,8 +477,8 @@ P    X          F                K       J              F      J     Y      5   
                 </ul>
 
                 <ul class="student-links nav nav-pills">
-                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}"  target="_blank"><span class="glyphicon glyphicon-cloud"></span></a></li>{{/urlofpersonalwebsite}}
-                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}"  target="_blank"><span class="glyphicon glyphicon-send"></span></a></li>{{/personalemail}}
+                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}"  target="_blank">View Website</a></li>{{/urlofpersonalwebsite}}
+                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}"  target="_blank">Contact via Email</a></li>{{/personalemail}}
                 </ul>
         
               </div>
