--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@ P    X          F                K       J              F      J     Y      5   
             <div class="col-xs-12 col-sm-4 col-md-3 student-info">
 
               <ul class="student-nav nav nav-pills nav-justified">
-                <li><span class="overlay-nav-icon previous"></span></li>
-                <li><span class="overlay-nav-icon random"></span></li>
+                <li><span class="overlay-nav-icon previous">*</span></li>
+                <li><span class="overlay-nav-icon random">*</span></li>
                 <li><span class="overlay-nav-icon next"></span></li>
               </ul>
 
@@ -476,9 +476,9 @@ P    X          F                K       J              F      J     Y      5   
                   <li>{{showdate}}</li>
                 </ul>
 
-                <ul class="student-links nav nav-pills">
-                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}"  target="_blank">View Website</a></li>{{/urlofpersonalwebsite}}
-                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}"  target="_blank">Contact via Email</a></li>{{/personalemail}}
+                <ul class="student-links nav">
+                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}" target="_blank">View Website</a></li>{{/urlofpersonalwebsite}}
+                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}" target="_blank">Contact via Email</a></li>{{/personalemail}}
                 </ul>
         
               </div>
