--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small">Opening: January 24, 5-7pm</p>
+                  <p class="small red">Opening: January 24, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Teaching MA</p>
@@ -258,7 +258,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small">Opening: January 31, 5-7pm</p>
+                  <p class="small red">Opening: January 31, 5-7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Post-Baccalaureate Fine Art</p>
@@ -268,10 +268,11 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Feb 01</date>&ndash;<date>May 09, 2014</date></h3>
-                  <p class="small"> <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
+                  <p class="small red">Openings throughout the semester</p> 
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Curatorial Practice MFA</p>
+                  <p class="small">Curatorial Students take over individual galleries all across Baltimore from February to May. <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Details »</a></p>
                 </div>
               </li>
 
@@ -279,7 +280,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Mar 28</date>&ndash;<date>Apr 06, 2014</date></h3>
-                  <p class="small">Opening: March 28, 5&ndash;7pm</p>
+                  <p class="small red">Opening: March 28, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Illustration Practice MFA</p>
@@ -292,7 +293,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 11</date>&ndash;<date>Apr 20, 2014</date></h3>
-                  <p class="small">Opening: April 11, 5&ndash;7pm</p>
+                  <p class="small red">Opening: April 11, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Community Arts MFA</p>
@@ -305,7 +306,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 23</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">Opening: April 25, 5&ndash;7pm</p>
+                  <p class="small red">Opening: April 25, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Social Design MA</p>
@@ -316,7 +317,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Apr 25</date>&ndash;<date>May 04, 2014</date></h3>
-                  <p class="small">Opening: April 25, 5&ndash;7pm</p>
+                  <p class="small red">Opening: April 25, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">LeRoy E. Hoffberger School of Painting MFA</p>
@@ -328,10 +329,11 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
-                  <p class="small"><a href="criticalstudies.html">Symposium from 5&ndash;7pm<br></a>Takes place at the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></p>
+                  <p class="small red">Symposium from 5&ndash;7pm</a></p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead"><a href="criticalstudies.html">Critical Studies MA</a></p>
+                  <p class="small">Students present their thesis work at a symposium held at the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></p>
                 </div>
               </li>
 
@@ -339,7 +341,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jun 28</date>&ndash;<date>Jul 12, 2014</date></h3>
-                  <p class="small">Opening: June 28, 6&ndash;8p</p>
+                  <p class="small red">Opening: June 28, 6&ndash;8p</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Studio Art MFA</p>
