--- a/index.html
+++ b/index.html
@@ -506,12 +506,14 @@ P    X          F                K       J              F      J     Y      5   
                 </div>
                 
                 <!-- Controls -->
+                {{#slideshow}}
                 <a class="left carousel-control" href="#slideshow" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
                 <a class="right carousel-control" href="#slideshow" data-slide="next">
                   <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
+                {{/slideshow}}
               </div><!-- end SS -->
 
               <article class="row">
