--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@ P    X          F                K       J              F      J     Y      5   
             <div class="col-xs-12 col-sm-4 col-md-3 student-info">
 
               <ul class="student-nav nav nav-pills nav-justified">
-                <li><span class="overlay-nav-icon previous">*</span></li>
-                <li><span class="overlay-nav-icon random">*</span></li>
-                <li><span class="overlay-nav-icon next"></span></li>
+                <li><a href="/#id={{previd}}"><span class="overlay-nav-icon previous"></span></a></li>
+                <li><span class="overlay-nav-icon random"></span></li>
+                <li><a href="/#id={{nextid}}"><span class="overlay-nav-icon next"></span></a></li>
               </ul>
 
               <div>
