--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@ P    X          F                K       J              F      J     Y      5   
         
             <div class="col-xs-12 col-sm-8 col-md-9">
             
+              {{#slideshowimages}}
               <div id="slideshow" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -515,6 +516,10 @@ P    X          F                K       J              F      J     Y      5   
                 </a>
                 {{/slideshow}}
               </div><!-- end SS -->
+              {{/slideshowimages}}
+              {{^slideshowimages}}
+              <h2>No Images</h2>
+              {{/slideshowimages}}
 
               <article class="row">
                 <p class="col-xs-12 col-md-9 student-statement">{{ websitelongstatementupto500words }}</p>
