--- a/index.html
+++ b/index.html
@@ -201,10 +201,9 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="D center">D Center</a></li>
                         <li><a href="#" data-gallery="Decker">Decker</a></li>
                         <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                        <li><a href="#" data-gallery="Leidy">Leidy</a></li>
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
-                        <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
+                        <li><a href="#" data-gallery="Riggs,Leidy">Studio Center Galleries</a></li>
                         <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
                       </ul>
                     </div>
