--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><a href="#" data-gallery="D center">D Center</a></li>
                     <li><a href="#" data-gallery="Decker">Decker</a></li>
                     <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                    <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                    <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                     <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                     <li><a href="#" data-gallery="Riggs">Studio Center Galleries</a></li>
                     <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
@@ -201,7 +201,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="D center">D Center</a></li>
                         <li><a href="#" data-gallery="Decker">Decker</a></li>
                         <li><a href="#" data-gallery="Fox">Fox 3</a></li>
-                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Riggs,Leidy">Studio Center Galleries</a></li>
                         <li><a href="#" >Off Campus</a></li> <!-- this needs to be the curatorial practice students, can it somehow use the program data from above? -->
