--- a/index.html
+++ b/index.html
@@ -369,13 +369,13 @@ P    X          F                K       J              F      J     Y      5   
               </div>
               <div  class="col-xs-12 col-sm-6 col-md-3">
                 <div id="galleries-data">
-                  <ul>
+                  <ul data-gallery="Pinkard">
                     <li><h4>Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
                     <li><p>1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/Bunting+Building/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6541b717da384fd8">Get Directions</a></p></li>
                   </ul>
-                  <ul>
+                  <ul data-gallery="Fox 3">
                     <li><h4>Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
@@ -383,20 +383,20 @@ P    X          F                K       J              F      J     Y      5   
                     <li><p>1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/Decker+and+Meyerhoff+Galleries/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6e7b0c3da90d8dd1">Get Directions</a></p></li>
                   </ul>
-                  <ul>
+                  <ul data-gallery="Riggs,Leidy">
                     <li><h4>Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
                     <li><p>131 W. North Ave. <br/>Baltimore, MD 21201</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/131+W+North+Ave/@39.310547,-76.618941,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804c03b3ac339:0xb9849904ae9381af">Get Directions</a></p></li>
                   </ul>
-                  <ul>
+                  <ul data-gallery="D Center">
                     <li><h4>D Center</h4></li>
                     <li><h5>D Center Gallery</h5></li>
                     <li><p>18 W. North Ave. <br/>Baltimore, MD 21218</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/18+W+North+Ave/@39.3111576,-76.6171982,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804ea61df87b5:0xfb5919f46f01192">Get Directions</a></p></li>
                   </ul>
-                  <ul>
+                  <ul data-gallery="">
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
                     <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Details »</a></p></li>
