Adding more filters

--- a/index.html
+++ b/index.html
@@ -370,13 +370,13 @@ P    X          F                K       J              F      J     Y      5   
               </div>
               <div  class="col-xs-12 col-sm-6 col-md-3">
                 <div id="galleries-data">
-                  <ul data-gallery="Pinkard">
+                  <ul data-gallery="Pinkard,Bunting">
                     <li><h4>Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
                     <li><p>1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/Bunting+Building/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6541b717da384fd8">Get Directions</a></p></li>
                   </ul>
-                  <ul data-gallery="Fox 3">
+                  <ul data-gallery="Fox 3,Decker,Meyerhoff">
                     <li><h4>Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
