--- a/index.html
+++ b/index.html
@@ -399,10 +399,8 @@ P    X          F                K       J              F      J     Y      5   
                   </ul>
                   <ul data-gallery="">
                     <li><h4>Off Campus</h4></li>
-                    <li><h5>Curatorial Practice</h5></li>
-                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Details »</a></p></li>
-                    <li class="add-top"><h5>Critical Studies</h5></li>
-                    <li><p><a href="criticalstudies.html">Details »</a></p></li>
+                    <li><h5><a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Curatorial Practice</a></h5></li>
+                    <li><h5 class="add-top"><a href="criticalstudies.html">Critical Studies</a></h5></li>
                   </ul>
                 </div>
               </div>
