fix HTTP:// missing from student links

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ P    X          F                K       J              F      J     Y      5   
                 </ul>
 
                 <ul class="student-links">
-                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}" target="_blank">View Website</a></li>{{/urlofpersonalwebsite}}
+                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="http://{{ urlofpersonalwebsite }}" target="_blank">View Website</a></li>{{/urlofpersonalwebsite}}
                   {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}" target="_blank">Contact via Email</a></li>{{/personalemail}}
                 </ul>
         
