--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ P    X          F                K       J              F      J     Y      5   
         
           <article id="intro">
             <div class="row">
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-10">
                 <p class="lead">The Graduate Spring/Summer Exhibition Season 2014 presents work to the MICA community and the public from January 24 &ndash; May 4th and resumes June 26 &ndash; July 12. The season includes MFA, MA and Post-Baccalaureate Fine Art and Graphic Design exhibitions and critiques, gallery talks and presentations, public programs, and symposium, and student curated installations throughout the city.</p>
                 <p class="lead">The Graduate Exhibition Season showcases the creative achievements of MICA&rsquo;s Graduate Programs&mdash;a diverse group of artists, designers, scholars, and curators. It offers the campus community and the general public opportunities to experience and engage with the creative process at MICA.</p>
               </div>
@@ -365,10 +365,10 @@ P    X          F                K       J              F      J     Y      5   
             <h1>Participating Galleries</h1>
             <p>Programs are spread across galleries; see student pages for individual locations. <a href="pdf/gradshow_2014_map.pdf" target="_blank">Download Map</a></p>
             <section class="row">
-             <div class="col-xs-12 col-sm-6 col-md-9">
+             <div class="col-xs-12 col-sm-8 col-md-9">
                 <img class="map" src="img/gradshow_2014_map.jpg" />
               </div>
-              <div  class="col-xs-12 col-sm-6 col-md-3">
+              <div  class="col-xs-12 col-sm-4 col-md-3">
                 <div id="galleries-data">
                   <ul data-gallery="Pinkard,Bunting">
                     <li><h4>Bunting Center</h4></li>
