--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -46,7 +46,7 @@ P    X          F                K       J              F      J     Y      5   
     <div class="student-overlay">
       <main class="container">
   
-        <button type="button" class="close">&times;</button>
+        <button type="button" class="close">&times;</button> <!-- shit... need this to take you back to homepage... -->
   
         <div class="container">
           
