--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ P    X          F                K       J              F      J     Y      5   
                 {{/slideshowsingle}}
                 {{^slideshowsingle}}
                 {{#slideshow}}
-                <img src="http://mfa.cape.io/{{.}}">
+                <div id="singleimg"><img src="http://mfa.cape.io/{{.}}"></div>
                 {{/slideshow}}
                 {{/slideshowsingle}}
               {{/slideshowimages}}
