--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ P    X          F                K       J              F      J     Y      5   
                 {{/slideshowsingle}}
               {{/slideshowimages}}
               {{^slideshowimages}}
-              <h2>No Images</h2>
+              <h2 class="gap">No Images</h2>
               {{/slideshowimages}}
 
               <article class="row">
